css/style.css
/* color palette */
.primary-color { background: #2196F3; }
.primary-dark-color { background: #1976D2; }
.primary-light-color { background: #BBDEFB; }
.accent-color { background: #FF9800; }

.header-text-color { color: #FFFFFF; }
.primary-text-color { color: #212121; }
.secondary-text-color { color: #757575; }

.background-color { color: #FFFFFF; }
.divider-color { background: #BDBDBD; }

.shadow-color {background: #888888;}

html, body {
    font-family: Roboto, Arial, sans-serif;
}

header, footer {
    font-family: Montserrat, Verdana, sans-serif;
}

code {
    font-family: "Roboto Mono", Consolas, sans-serif;
    background: #E0E0E0;
}

.centered {
    text-align: center;
}

/* homepage */
.homepage_header {
    text-decoration: underline;
}

.homepage_column {
    margin: 0 0 15px 0;
    padding: 0 15px 0 15px;
}

.homepage_section-heading {

}

.homepage_section-paragraph {
    text-indent: 1em;
}

/* tutorial */
.tutorial_header {
    text-decoration: underline;
}

.tutorial_content-row {
    margin: 30px;
}

.tutorial_quiz-btn {
    padding: 10px;
    margin-bottom: 10px;
}
/*Webinar */
.webinars{
  margin: 20px;
}

/*General buffers for rows*/
.top-buffer{
    margin-top: 20px;
}

.left-buffer{
    margin-left: 20px;
}

.contact-btn{
    color: white;
    background-color: #FF9800;
    padding: 0.9vw 1.7vw !important;
    text-transform: uppercase;
    letter-spacing: 1.9px;
    border-width: 0 !important;

    transition: .2s ease-in-out;
    -webkit-transition: .2s ease-in-out;
    -moz-transition: .2s ease-in-out;
    -o-transition: .2s ease-in-out;
}
.form-control {
    padding: 0 0 0.5vw 0 !important;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none !important;
}
.form-group{
    border-bottom: 1px solid #555;
    margin-bottom: 3vw;
}
.form-group::before {
    content: '';
    position: absolute;
}
.form-effect{
    box-sizing: content-box;
    border-bottom: 1px solid #FF2241;
    width: 0;
    height: 100%;
    position: absolute;
    top: 0;
    transition: width 0.6s ease-in-out;
}
.form-effect.changed::before{
    width: 100%;
    border-bottom: 1px solid #FF2241;
}
.subheader {
    font-size: 20px;
    padding-bottom: 70px
}

